--- a/money.html
+++ b/money.html
@@ -45,124 +45,194 @@
     </div>
     <div class="container">
       <div class="gameboard">
-        <div class="row g-0">
-          <div class="col-2">
-            <img src="assets/fantasy_building.jpg" class="img-fluid" />
-          </div>
-          <div class="col-2">
-            <img src="assets/fantasy_building.jpg" class="img-fluid" />
-          </div>
-          <div class="col-2">
-            <img src="assets/fantasy_building.jpg" class="img-fluid" />
-          </div>
-          <div class="col-2">
-            <img src="assets/fantasy_building.jpg" class="img-fluid" />
-          </div>
-          <div class="col-2">
-            <img src="assets/fantasy_building.jpg" class="img-fluid" />
-          </div>
+        <div class="gameboard-row d-flex">
+          <img
+            src="assets/fantasy_building.jpg"
+            alt="A fantasy building"
+            height="50"
+          />
+          <img
+            src="assets/fantasy_building.jpg"
+            alt="A fantasy building"
+            height="50"
+          />
+          <img
+            src="assets/fantasy_building.jpg"
+            alt="A fantasy building"
+            height="50"
+          />
+          <img
+            src="assets/fantasy_building.jpg"
+            alt="A fantasy building"
+            height="50"
+          />
+          <img
+            src="assets/fantasy_building.jpg"
+            alt="A fantasy building"
+            height="50"
+          />
         </div>
-        <div class="row g-0">
-          <div class="col-2">
-            <img src="assets/fantasy_building.jpg" class="img-fluid" />
-          </div>
-          <div class="col-2">
-            <img src="assets/fantasy_building.jpg" class="img-fluid" />
-          </div>
-          <div class="col-2">
-            <img src="assets/fantasy_building.jpg" class="img-fluid" />
-          </div>
-          <div class="col-2">
-            <img src="assets/fantasy_building.jpg" class="img-fluid" />
-          </div>
-          <div class="col-2">
-            <img src="assets/fantasy_building.jpg" class="img-fluid" />
-          </div>
+        <div class="gameboard-row d-flex">
+          <img
+            src="assets/fantasy_building.jpg"
+            alt="A fantasy building"
+            height="50"
+          />
+          <img
+            src="assets/fantasy_building.jpg"
+            alt="A fantasy building"
+            height="50"
+          />
+          <img
+            src="assets/fantasy_building.jpg"
+            alt="A fantasy building"
+            height="50"
+          />
+          <img
+            src="assets/fantasy_building.jpg"
+            alt="A fantasy building"
+            height="50"
+          />
+          <img
+            src="assets/fantasy_building.jpg"
+            alt="A fantasy building"
+            height="50"
+          />
         </div>
-        <div class="row g-0">
-          <div class="col-2">
-            <img src="assets/fantasy_building.jpg" class="img-fluid" />
-          </div>
-          <div class="col-2">
-            <img src="assets/fantasy_building.jpg" class="img-fluid" />
-          </div>
-          <div class="col-2">
-            <img src="assets/fantasy_building.jpg" class="img-fluid" />
-          </div>
-          <div class="col-2">
-            <img src="assets/fantasy_building.jpg" class="img-fluid" />
-          </div>
-          <div class="col-2">
-            <img src="assets/fantasy_building.jpg" class="img-fluid" />
-          </div>
+        <div class="gameboard-row d-flex">
+          <img
+            src="assets/fantasy_building.jpg"
+            alt="A fantasy building"
+            height="50"
+          />
+          <img
+            src="assets/fantasy_building.jpg"
+            alt="A fantasy building"
+            height="50"
+          />
+          <img
+            src="assets/fantasy_building.jpg"
+            alt="A fantasy building"
+            height="50"
+          />
+          <img
+            src="assets/fantasy_building.jpg"
+            alt="A fantasy building"
+            height="50"
+          />
+          <img
+            src="assets/fantasy_building.jpg"
+            alt="A fantasy building"
+            height="50"
+          />
         </div>
-        <div class="row g-0">
-          <div class="col-2">
-            <img src="assets/fantasy_building.jpg" class="img-fluid" />
-          </div>
-          <div class="col-2">
-            <img src="assets/fantasy_building.jpg" class="img-fluid" />
-          </div>
-          <div class="col-2">
-            <img src="assets/fantasy_building.jpg" class="img-fluid" />
-          </div>
-          <div class="col-2">
-            <img src="assets/fantasy_building.jpg" class="img-fluid" />
-          </div>
-          <div class="col-2">
-            <img src="assets/fantasy_building.jpg" class="img-fluid" />
-          </div>
+        <div class="gameboard-row d-flex">
+          <img
+            src="assets/fantasy_building.jpg"
+            alt="A fantasy building"
+            height="50"
+          />
+          <img
+            src="assets/fantasy_building.jpg"
+            alt="A fantasy building"
+            height="50"
+          />
+          <img
+            src="assets/fantasy_building.jpg"
+            alt="A fantasy building"
+            height="50"
+          />
+          <img
+            src="assets/fantasy_building.jpg"
+            alt="A fantasy building"
+            height="50"
+          />
+          <img
+            src="assets/fantasy_building.jpg"
+            alt="A fantasy building"
+            height="50"
+          />
         </div>
-        <div class="row g-0">
-          <div class="col-2">
-            <img src="assets/fantasy_building.jpg" class="img-fluid" />
-          </div>
-          <div class="col-2">
-            <img src="assets/fantasy_building.jpg" class="img-fluid" />
-          </div>
-          <div class="col-2">
-            <img src="assets/fantasy_building.jpg" class="img-fluid" />
-          </div>
-          <div class="col-2">
-            <img src="assets/fantasy_building.jpg" class="img-fluid" />
-          </div>
-          <div class="col-2">
-            <img src="assets/fantasy_building.jpg" class="img-fluid" />
-          </div>
+        <div class="gameboard-row d-flex">
+          <img
+            src="assets/fantasy_building.jpg"
+            alt="A fantasy building"
+            height="50"
+          />
+          <img
+            src="assets/fantasy_building.jpg"
+            alt="A fantasy building"
+            height="50"
+          />
+          <img
+            src="assets/fantasy_building.jpg"
+            alt="A fantasy building"
+            height="50"
+          />
+          <img
+            src="assets/fantasy_building.jpg"
+            alt="A fantasy building"
+            height="50"
+          />
+          <img
+            src="assets/fantasy_building.jpg"
+            alt="A fantasy building"
+            height="50"
+          />
         </div>
-        <div class="row g-0">
-          <div class="col-2">
-            <img src="assets/fantasy_building.jpg" class="img-fluid" />
-          </div>
-          <div class="col-2">
-            <img src="assets/fantasy_building.jpg" class="img-fluid" />
-          </div>
-          <div class="col-2">
-            <img src="assets/fantasy_building.jpg" class="img-fluid" />
-          </div>
-          <div class="col-2">
-            <img src="assets/fantasy_building.jpg" class="img-fluid" />
-          </div>
-          <div class="col-2">
-            <img src="assets/fantasy_building.jpg" class="img-fluid" />
-          </div>
+        <div class="gameboard-row d-flex">
+          <img
+            src="assets/fantasy_building.jpg"
+            alt="A fantasy building"
+            height="50"
+          />
+          <img
+            src="assets/fantasy_building.jpg"
+            alt="A fantasy building"
+            height="50"
+          />
+          <img
+            src="assets/fantasy_building.jpg"
+            alt="A fantasy building"
+            height="50"
+          />
+          <img
+            src="assets/fantasy_building.jpg"
+            alt="A fantasy building"
+            height="50"
+          />
+          <img
+            src="assets/fantasy_building.jpg"
+            alt="A fantasy building"
+            height="50"
+          />
         </div>
-        <div class="row g-0">
-          <div class="col-2">
-            <img src="assets/fantasy_building.jpg" class="img-fluid" />
-          </div>
-          <div class="col-2">
-            <img src="assets/fantasy_building.jpg" class="img-fluid" />
-          </div>
-          <div class="col-2">
-            <img src="assets/fantasy_building.jpg" class="img-fluid" />
-          </div>
-          <div class="col-2">
-            <img src="assets/fantasy_building.jpg" class="img-fluid" />
-          </div>
-          <div class="col-2">
-            <img src="assets/fantasy_building.jpg" class="img-fluid" />
-          </div>
+        <div class="gameboard-row d-flex">
+          <img
+            src="assets/fantasy_building.jpg"
+            alt="A fantasy building"
+            height="50"
+          />
+          <img
+            src="assets/fantasy_building.jpg"
+            alt="A fantasy building"
+            height="50"
+          />
+          <img
+            src="assets/fantasy_building.jpg"
+            alt="A fantasy building"
+            height="50"
+          />
+          <img
+            src="assets/fantasy_building.jpg"
+            alt="A fantasy building"
+            height="50"
+          />
+          <img
+            src="assets/fantasy_building.jpg"
+            alt="A fantasy building"
+            height="50"
+          />
         </div>
       </div>
     </div>
