--- a/money.html
+++ b/money.html
@@ -37,7 +37,7 @@
         </div>
         <div class="col-4">
           <div class="d-flex gap-4">
-            <p>Click for help</p>
+            <p onclick="help()">Click for help</p>
             <p id="help">Help report</p>
           </div>
         </div>
@@ -50,53 +50,36 @@
             src="assets/fantasy_building.jpg"
             alt="A fantasy building"
             height="50"
+            id="tile-0"
+            onclick="check(0)"
           />
           <img
             src="assets/fantasy_building.jpg"
             alt="A fantasy building"
             height="50"
+            id="tile-1"
+            onclick="check(1)"
           />
           <img
             src="assets/fantasy_building.jpg"
             alt="A fantasy building"
             height="50"
+            id="tile-2"
+            onclick="check(2)"
           />
           <img
             src="assets/fantasy_building.jpg"
             alt="A fantasy building"
             height="50"
+            id="tile-3"
+            onclick="check(3)"
           />
           <img
             src="assets/fantasy_building.jpg"
             alt="A fantasy building"
             height="50"
-          />
-        </div>
-        <div class="gameboard-row d-flex">
-          <img
-            src="assets/fantasy_building.jpg"
-            alt="A fantasy building"
-            height="50"
-          />
-          <img
-            src="assets/fantasy_building.jpg"
-            alt="A fantasy building"
-            height="50"
-          />
-          <img
-            src="assets/fantasy_building.jpg"
-            alt="A fantasy building"
-            height="50"
-          />
-          <img
-            src="assets/fantasy_building.jpg"
-            alt="A fantasy building"
-            height="50"
-          />
-          <img
-            src="assets/fantasy_building.jpg"
-            alt="A fantasy building"
-            height="50"
+            id="tile-4"
+            onclick="check(4)"
           />
         </div>
         <div class="gameboard-row d-flex">
@@ -104,53 +87,36 @@
             src="assets/fantasy_building.jpg"
             alt="A fantasy building"
             height="50"
+            id="tile-5"
+            onclick="check(5)"
           />
           <img
             src="assets/fantasy_building.jpg"
             alt="A fantasy building"
             height="50"
+            id="tile-6"
+            onclick="check(6)"
           />
           <img
             src="assets/fantasy_building.jpg"
             alt="A fantasy building"
             height="50"
+            id="tile-7"
+            onclick="check(7)"
           />
           <img
             src="assets/fantasy_building.jpg"
             alt="A fantasy building"
             height="50"
+            id="tile-8"
+            onclick="check(8)"
           />
           <img
             src="assets/fantasy_building.jpg"
             alt="A fantasy building"
             height="50"
-          />
-        </div>
-        <div class="gameboard-row d-flex">
-          <img
-            src="assets/fantasy_building.jpg"
-            alt="A fantasy building"
-            height="50"
-          />
-          <img
-            src="assets/fantasy_building.jpg"
-            alt="A fantasy building"
-            height="50"
-          />
-          <img
-            src="assets/fantasy_building.jpg"
-            alt="A fantasy building"
-            height="50"
-          />
-          <img
-            src="assets/fantasy_building.jpg"
-            alt="A fantasy building"
-            height="50"
-          />
-          <img
-            src="assets/fantasy_building.jpg"
-            alt="A fantasy building"
-            height="50"
+            id="tile-9"
+            onclick="check(9)"
           />
         </div>
         <div class="gameboard-row d-flex">
@@ -158,53 +124,36 @@
             src="assets/fantasy_building.jpg"
             alt="A fantasy building"
             height="50"
+            id="tile-10"
+            onclick="check(10)"
           />
           <img
             src="assets/fantasy_building.jpg"
             alt="A fantasy building"
             height="50"
+            id="tile-11"
+            onclick="check(11)"
           />
           <img
             src="assets/fantasy_building.jpg"
             alt="A fantasy building"
             height="50"
+            id="tile-12"
+            onclick="check(12)"
           />
           <img
             src="assets/fantasy_building.jpg"
             alt="A fantasy building"
             height="50"
+            id="tile-13"
+            onclick="check(13)"
           />
           <img
             src="assets/fantasy_building.jpg"
             alt="A fantasy building"
             height="50"
-          />
-        </div>
-        <div class="gameboard-row d-flex">
-          <img
-            src="assets/fantasy_building.jpg"
-            alt="A fantasy building"
-            height="50"
-          />
-          <img
-            src="assets/fantasy_building.jpg"
-            alt="A fantasy building"
-            height="50"
-          />
-          <img
-            src="assets/fantasy_building.jpg"
-            alt="A fantasy building"
-            height="50"
-          />
-          <img
-            src="assets/fantasy_building.jpg"
-            alt="A fantasy building"
-            height="50"
-          />
-          <img
-            src="assets/fantasy_building.jpg"
-            alt="A fantasy building"
-            height="50"
+            id="tile-14"
+            onclick="check(14)"
           />
         </div>
         <div class="gameboard-row d-flex">
@@ -212,29 +161,262 @@
             src="assets/fantasy_building.jpg"
             alt="A fantasy building"
             height="50"
+            id="tile-15"
+            onclick="check(15)"
           />
           <img
             src="assets/fantasy_building.jpg"
             alt="A fantasy building"
             height="50"
+            id="tile-16"
+            onclick="check(16)"
           />
           <img
             src="assets/fantasy_building.jpg"
             alt="A fantasy building"
             height="50"
+            id="tile-17"
+            onclick="check(17)"
           />
           <img
             src="assets/fantasy_building.jpg"
             alt="A fantasy building"
             height="50"
+            id="tile-18"
+            onclick="check(18)"
           />
           <img
             src="assets/fantasy_building.jpg"
             alt="A fantasy building"
             height="50"
+            id="tile-19"
+            onclick="check(19)"
+          />
+        </div>
+        <div class="gameboard-row d-flex">
+          <img
+            src="assets/fantasy_building.jpg"
+            alt="A fantasy building"
+            height="50"
+            id="tile-20"
+            onclick="check(20)"
+          />
+          <img
+            src="assets/fantasy_building.jpg"
+            alt="A fantasy building"
+            height="50"
+            id="tile-21"
+            onclick="check(21)"
+          />
+          <img
+            src="assets/fantasy_building.jpg"
+            alt="A fantasy building"
+            height="50"
+            id="tile-22"
+            onclick="check(22)"
+          />
+          <img
+            src="assets/fantasy_building.jpg"
+            alt="A fantasy building"
+            height="50"
+            id="tile-23"
+            onclick="check(23)"
+          />
+          <img
+            src="assets/fantasy_building.jpg"
+            alt="A fantasy building"
+            height="50"
+            id="tile-24"
+            onclick="check(24)"
+          />
+        </div>
+        <div class="gameboard-row d-flex">
+          <img
+            src="assets/fantasy_building.jpg"
+            alt="A fantasy building"
+            height="50"
+            id="tile-25"
+            onclick="check(25)"
+          />
+          <img
+            src="assets/fantasy_building.jpg"
+            alt="A fantasy building"
+            height="50"
+            id="tile-26"
+            onclick="check(26)"
+          />
+          <img
+            src="assets/fantasy_building.jpg"
+            alt="A fantasy building"
+            height="50"
+            id="tile-27"
+            onclick="check(27)"
+          />
+          <img
+            src="assets/fantasy_building.jpg"
+            alt="A fantasy building"
+            height="50"
+            id="tile-28"
+            onclick="check(28)"
+          />
+          <img
+            src="assets/fantasy_building.jpg"
+            alt="A fantasy building"
+            height="50"
+            id="tile-29"
+            onclick="check(29)"
+          />
+        </div>
+        <div class="gameboard-row d-flex">
+          <img
+            src="assets/fantasy_building.jpg"
+            alt="A fantasy building"
+            height="50"
+            id="tile-30"
+            onclick="check(30)"
+          />
+          <img
+            src="assets/fantasy_building.jpg"
+            alt="A fantasy building"
+            height="50"
+            id="tile-31"
+            onclick="check(31)"
+          />
+          <img
+            src="assets/fantasy_building.jpg"
+            alt="A fantasy building"
+            height="50"
+            id="tile-32"
+            onclick="check(32)"
+          />
+          <img
+            src="assets/fantasy_building.jpg"
+            alt="A fantasy building"
+            height="50"
+            id="tile-33"
+            onclick="check(33)"
+          />
+          <img
+            src="assets/fantasy_building.jpg"
+            alt="A fantasy building"
+            height="50"
+            id="tile-34"
+            onclick="check(34)"
           />
         </div>
       </div>
     </div>
   </body>
+  <script>
+    const ids = [
+      "tile-0",
+      "tile-1",
+      "tile-2",
+      "tile-3",
+      "tile-4",
+      "tile-5",
+      "tile-6",
+      "tile-7",
+      "tile-8",
+      "tile-9",
+      "tile-10",
+      "tile-11",
+      "tile-12",
+      "tile-13",
+      "tile-14",
+      "tile-15",
+      "tile-16",
+      "tile-17",
+      "tile-18",
+      "tile-19",
+      "tile-20",
+      "tile-21",
+      "tile-22",
+      "tile-23",
+      "tile-24",
+      "tile-25",
+      "tile-26",
+      "tile-27",
+      "tile-28",
+      "tile-29",
+      "tile-30",
+      "tile-31",
+      "tile-32",
+      "tile-33",
+      "tile-34",
+    ];
+    let score = 0;
+    let locations = 0;
+    let lastLocation = 0;
+    const fancyCoinLocation = [2, 5, 14, 19, 23, 33];
+    const monsterLocation = 20;
+    let gameOver = false;
+
+    function check(position) {
+      if (gameOver) {
+        return;
+      }
+
+      const tileId = ids[position];
+      const img = document.getElementById(tileId);
+
+      if (position === monsterLocation) {
+        // check for the monster
+        img.setAttribute("src", "assets/fantasy_monster.jpg");
+        gameOver = true;
+        score -= 5;
+      } else if (fancyCoinLocation.includes(position)) {
+        // check for the fancy coin
+        img.setAttribute("src", "assets/fantasy_coin_epic.jpg");
+        score += 3;
+      } else {
+        // regular coin
+        img.setAttribute("src", "assets/fantasy_coin.jpg");
+        score++;
+      }
+
+      const scoreEl = document.getElementById("score");
+      scoreEl.textContent = `Score is ${score}`;
+
+      lastLocation = position;
+      locations++;
+      const locationsEl = document.getElementById("locations");
+      locationsEl.textContent = `Number of locations checked is ${locations}`;
+    }
+
+    function help() {
+      const kinShipPositions = [
+        lastLocation - 1,
+        lastLocation + 1,
+        lastLocation + 5,
+        lastLocation - 5,
+      ];
+
+      const monsterRow = parseInt(monsterLocation / 5);
+      const currentRow = parseInt(lastLocation / 5);
+      const monsterRowDifference = monsterRow - currentRow;
+
+      const monsterColumn = monsterLocation % 5;
+      const currentColumn = lastLocation % 5;
+      const monsterColumnDifference = monsterColumn - currentColumn;
+
+      let helpText = "";
+
+      if (kinShipPositions.some((p) => fancyCoinLocation.includes(p))) {
+        helpText = "so close!";
+      } else if (
+        monsterRowDifference <= 1 &&
+        monsterRowDifference >= -1 &&
+        monsterColumnDifference <= 1 &&
+        monsterColumnDifference >= -1
+      ) {
+        helpText = "Grrr";
+      } else {
+        helpText = "all clear";
+      }
+
+      const helpEl = document.getElementById("help");
+      helpEl.textContent = helpText;
+    }
+  </script>
 </html>
