--- a/money.html
+++ b/money.html
@@ -25,6 +25,7 @@
     <div class="container">
       <h1 class="my-3">Find the coins by Sem</h1>
       <hr />
+      <button class="btn btn-warning" onclick="newGame()">New game</button>
       <p class="fw-semibold">
         Click on the locations to find coins, beware the monster
       </p>
@@ -348,9 +349,36 @@
     let score = 0;
     let locations = 0;
     let lastLocation = 0;
-    const fancyCoinLocation = [2, 5, 14, 19, 23, 33];
-    const monsterLocation = 20;
+    let monsterLocation = Math.floor(Math.random() * 35);
+    let fancyCoinLocation = Array.from({ length: 6 }, () =>
+      Math.floor(Math.random() * 35)
+    ).filter((value, index, self) => self.indexOf(value) === index);
+
     let gameOver = false;
+
+    function newGame() {
+      score = 0;
+      const scoreEl = document.getElementById("score");
+      scoreEl.textContent = `Score is ${score}`;
+
+      locations = 0;
+      const locationsEl = document.getElementById("locations");
+      locationsEl.textContent = `Number of locations checked is ${locations}`;
+
+      lastLocation = 0;
+      monsterLocation = Math.floor(Math.random() * 35);
+      fancyCoinLocation = Array.from({ length: 6 }, () =>
+        Math.floor(Math.random() * 35)
+      ).filter((value, index, self) => self.indexOf(value) === index);
+
+      gameOver = false;
+
+      for (let i = 0; i < ids.length; i++) {
+        const img = document
+          .getElementById(ids[i])
+          .setAttribute("src", "assets/fantasy_building.jpg");
+      }
+    }
 
     function check(position) {
       if (gameOver) {
